src/test/ui/use/use-after-move-self.nll.stderr
error[E0382]: use of moved value: `self`
  --> $DIR/use-after-move-self.rs:10:16
   |
LL |         self.bar();
   |         ---- value moved here
LL |         return *self.x;  //~ ERROR use of moved value: `*self.x`
   |                ^^^^^^^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
